--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ali Osia
 
 # Short bio or description (displayed in the header)
-description: Ph.D. candidate in computer engineering at Sharif University of Technology
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/aliosia
